# auto_diff_lib

./: .gitignore  .gitmodules  CMakeLists.txt
include/: buttom_up.hpp
src/: buttom_up_example.cpp  main.cpp
